k8s/base/redis-service.yml
# k8s/base/redis-service.yml

apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: taskmanager
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
